--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <title>Belajar Frontend</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mini Profil</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Halo Dunia 👋</h1>
-    <p>Website pertama Lufthi pakai GitHub Pages!</p>
+  <div class="card">
+    <h1>Halo, Namaku Keisha</h1>
+    <p>Usiaku 10 tahun. Aku suka belajar coding!</p>
+    <button id="btnMessage">Klik aku</button>
+    <p id="message"></p>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
